--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -1391,6 +1391,19 @@ year = {2011}
   owner = {mdescoteaux}
 }
 
+
+@article{kuo2008optimization,
+  title={Optimization of diffusion spectrum imaging and q-ball imaging on clinical MRI system},
+  author={Kuo, Li-Wei and Chen, Jyh-Horng and Wedeen, Van Jay and Tseng, Wen-Yih Isaac},
+  journal={Neuroimage},
+  volume={41},
+  number={1},
+  pages={7--18},
+  year={2008},
+  publisher={Elsevier}
+}
+
+
 @article{beck-teboulle:09,
 author = {Beck, Amir and Teboulle, Marc},
 doi = {10.1137/080716542},
@@ -1851,7 +1864,7 @@ author = "Paul A. Yushkevich and Hongzhi Wang and John Pluta and Sandhitsu R. Da
 }
 
 @article{Calamante20101233,
-title = "Track-density imaging (TDI): Super-resolution white matter imaging using whole-brain track-density mapping", 
+title = "Track-density imaging (TDI): Super-resolution white matter imaging using whole-brain track-density mapping",
 journal = "NeuroImage",
 volume = "53",
 number = "4",
