Change figure files to jpg as frontiers prefers jpgs and now you will need to use pdflatex to compile the file

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -182,7 +182,7 @@ methods of tractography, which estimate the trajectories of nerve fibers that
 communicate information between different parts of the brain.
 
 \begin{figure}
-\includegraphics[scale=0.55]{Figures/fornix.eps}
+\includegraphics[scale=0.55]{Figures/fornix.jpg}
 \centering{}
 \caption{The fornix is a C-shaped bundle connecting the hippocampus with the
  hypothalamus. The body of the fornix divides into two legs knows as the crus
@@ -422,7 +422,7 @@ streamlines. \emph{Sims} is focused on creating synthetic simulations.
 on segmentation of images and clustering of streamlines.
 
 \begin{figure}
-\includegraphics[scale=0.42]{Figures/module_structure2.eps}
+\includegraphics[scale=0.42]{Figures/module_structure2.jpg}
 \centering{}
 \caption{Dipy is one of the main projects of the Nipy community and depends strongly
 on Numpy, Scipy and Cython. This diagram further shows the major Dipy sub-modules.\label{Fig:module_structure}}
@@ -515,7 +515,7 @@ and the masked \texttt{S0}, \texttt{S0\_mask} a 3D array with the actual
 \texttt{S0} values in the foreground and 0s in the background.
 
 \begin{figure}
-\includegraphics[scale=0.65]{Figures/median_otsu.eps}
+\includegraphics[scale=0.65]{Figures/median_otsu.jpg}
 \centering{}
 \caption{Showing an axial slice in the center of \texttt{S0} before (left) and after brain extraction (right) using \texttt{median\_otsu}. \label{Fig:brain_segmentation}}
 \end{figure}
@@ -742,7 +742,7 @@ sphericity \citep{westin:97}, as well as the tensor mode, tensor norm
 are available under the \texttt{dipy.reconst.dti} module. In Fig.~\ref{Fig:dti_metrics} a few of the many available measures are shown.
 
 \begin{figure}
-\includegraphics[scale=0.45]{Figures/dti_metrics.eps}
+\includegraphics[scale=0.45]{Figures/dti_metrics.jpg}
 \centering{}
 \caption{Diffusion Tensor based scalar maps created with Dipy. \label{Fig:dti_metrics}}
 \end{figure}
@@ -843,7 +843,7 @@ advantage of GQI is that it is much faster to calculate than DSI or DSI with
 deconvolution.
 
 \begin{figure}
-\includegraphics[scale=0.60]{Figures/pdf_odf_60.eps}
+\includegraphics[scale=0.60]{Figures/pdf_odf_60.jpg}
 \centering{}
 \caption{Volumetric rendering of the 3D diffusion propagator of a $60\,^{\circ}$ crossing with standard DSI (top-left) and DSI with deconvolution (top-right) with their corresponding ODFs (bottom).\label{Fig:pdf}}
 \end{figure}
@@ -1001,7 +1001,7 @@ methods perform similarly as shown in
 \citep{descoteaux-deriche-etal:09,GaryfallidisISBI2013a}.
 
 \begin{figure*}[!htb]
-\centerline{\includegraphics[width=180mm]{Figures/ten_csa_csd2.eps}}
+\centerline{\includegraphics[width=180mm]{Figures/ten_csa_csd2.jpg}}
 \caption{a) Tensor ellipsoids color-coded with a DEC map, b) Tensor
   ODFs, c) Constant solid angle ODFs and d) constrained spherical deconvolution
   ODFs in of a region in the centrum semiovale showing crossings between the
@@ -1165,7 +1165,7 @@ generated from EuDX. In contrast, in Fig.~\ref{Fig:fornix} only a specific anato
 approximated rather than the full brain.
 
 \begin{figure*}[!htb]
-\includegraphics[scale=0.46]{Figures/qb.eps}
+\includegraphics[scale=0.46]{Figures/qb.jpg}
 \centering{}
 \caption{Left: An example of EuDX streamline tracking applied on a real
   human brain dataset and color-coded with a standard orientation colormap.
@@ -1408,7 +1408,7 @@ institutions in five countries (Canada, UK, USA, Italy and South Africa).
 
 \begin{figure}
 \centering{}
-\includegraphics[scale=0.37]{Figures/fig-gh.eps}
+\includegraphics[scale=0.37]{Figures/fig-gh.jpg}
 \caption{Participation in the Dipy GitHub repository. The cumulative number of
   unique contributors has been extracted using the git log command and tallied. Many
   new contributors have joined the project after the 0.6 release \label{Fig:gh_stats}}
