Bago's name corrected in the pdf too. I have already corrected it in the website

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -104,7 +104,7 @@ emphstyle={\color{self}\slshape},
 \author[Garyfallidis, Brett, Amirbekian, Rokem, van der Walt, Descoteaux,
   Nimmo-Smith]{Eleftherios~Garyfallidis\,$^{1,2,}$\footnote{to whom correspondence should be addressed. e-mail:
     garyfallidis@gmail.com}, Matthew~Brett\,$^{3}$,
-  Bago~Amirbekian\,$^{4}$, Ariel~Rokem\,$^{5}$, Stefan~van der Walt\,$^{6}$,
+  Bagrat~Amirbekian\,$^{4}$, Ariel~Rokem\,$^{5}$, Stefan~van der Walt\,$^{6}$,
   Maxime~Descoteaux\,$^{2}$, Ian~Nimmo-Smith\,$^{7}$ and Dipy~Contributors
   $^{8}$}
 
